src/objects/agf__ADM_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>agf__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADM_Status_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled_Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>ADM_Status_Histories</relationshipLabel>
        <relationshipName>ADM_Status_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work ID</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>ADM_Status_Histories</relationshipLabel>
        <relationshipName>ADM_Status_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ADM_Status_History</label>
    <nameField>
        <label>ADM_Status_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADM_Status_Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>